added nepal to description

--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -35,16 +35,16 @@
       <div class = "legen">Browse by body type</div>
       <div class= "browse_body_type">
       
-        <a href = '<%=bike_specs_path(body: "Cruiser")%>' title ="Bike Showroom Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
-        <a href = '<%=bike_specs_path(body: "Scooter")%>' title ="Bike Showroom Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
+        <a href = '<%=bike_specs_path(body: "Cruiser")%>' title ="Bike Showroom Nepal - Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
+        <a href = '<%=bike_specs_path(body: "Scooter")%>' title ="Bike Showroom Nepal - Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
       
       
-        <a href = '<%=bike_specs_path(body: "Sports")%>' title ="Bike Showroom Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
-        <a href = "<%=bike_specs_path(body: 'Super Sport')%>" title ="Bike Showroom Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
+        <a href = '<%=bike_specs_path(body: "Sports")%>' title ="Bike Showroom Nepal - Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
+        <a href = "<%=bike_specs_path(body: 'Super Sport')%>" title ="Bike Showroom Nepal - Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
       
       
-        <a href = '<%=bike_specs_path(body: "Standard")%>' title ="Bike Showroom Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
-        <a href = '<%=bike_specs_path(body: "Trail")%>' title ="Bike Showroom Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
+        <a href = '<%=bike_specs_path(body: "Standard")%>' title ="Bike Showroom Nepal - Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
+        <a href = '<%=bike_specs_path(body: "Trail")%>' title ="Bike Showroom Nepal - Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
        
       </div> 
     </div>
@@ -52,29 +52,29 @@
       <div class = "legen">Browse By: Makers</div>
       <div class= "browse_maker">
       
-        <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Nepal - Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Nepal - Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Nepal - Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "64x64"%></div></a>
         
-        <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Hartford")%>' title ="Bike Showroom Hartford"><div class= "image_border"><%= image_tag "hartford.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Nepal - Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hartford")%>' title ="Bike Showroom Nepal - Hartford"><div class= "image_border"><%= image_tag "hartford.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Nepal - Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "64x64"%></div></a>
         
-        <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "64x64"%></div></a>
+        <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Nepal - Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Nepal - Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Nepal - Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "64x64"%></div></a>
         
-        <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Piaggio")%>' title ="Bike Showroom Piaggio"><div class= "image_border"><%= image_tag "piaggio.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom Nepal - KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Nepal - Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Piaggio")%>' title ="Bike Showroom Nepal - Piaggio"><div class= "image_border"><%= image_tag "piaggio.jpg", size: "64x64"%></div></a>
         
-        <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Rieju")%>' title ="Bike Showroom Rieju"><div class= "image_border"><%= image_tag "rieju.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Nepal - Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Rieju")%>' title ="Bike Showroom Nepal - Rieju"><div class= "image_border"><%= image_tag "rieju.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Nepal - Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "64x64"%></div></a>
         
-        <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "64x64"%></div></a>
-        <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom Nepal - SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom Nepal - TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "64x64"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Nepal - Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "64x64"%></div></a>
          
       </div>  
     </div>
