--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -24,12 +24,12 @@
         <div class = "main_page_browse_by">
           <div class= "legen">Browse By: Body Type</div>
           <div class= "browse_body_type">
-            <a href = '<%=bikes_path(body: "Cruiser")%>' title ="Bike Sales Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a>
-            <a href = '<%=bikes_path(body: "Scooter")%>' title ="Bike Sales Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a>
-            <a href = '<%=bikes_path(body: "Sports")%>' title ="Bike Sales Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a>
-            <a href = '<%=bikes_path(body: "Super Sport")%>' title ="Bike Sales Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a>
-            <a href = '<%=bikes_path(body: "Standard")%>' title ="Bike Sales Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a>
-            <a href = '<%=bikes_path(body: "Trail")%>' title ="Bike Sales Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a>
+            <a href = '<%=bikes_path(body: "Cruiser")%>' title ="Bike Sales Nepal - Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a>
+            <a href = '<%=bikes_path(body: "Scooter")%>' title ="Bike Sales Nepal - Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a>
+            <a href = '<%=bikes_path(body: "Sports")%>' title ="Bike Sales Nepal - Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a>
+            <a href = '<%=bikes_path(body: "Super Sport")%>' title ="Bike Sales Nepal - Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a>
+            <a href = '<%=bikes_path(body: "Standard")%>' title ="Bike Sales Nepal - Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a>
+            <a href = '<%=bikes_path(body: "Trail")%>' title ="Bike Sales Nepal - Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a>
           </div>  
         </div><!--main_page_browse_by-->
       </div>
@@ -37,15 +37,15 @@
         <div class = "main_page_browse_by">
           <div class= "legen">Browse By: Top Makers</div>
           <div class= "browse_makers">
-            <a href = '<%=bikes_path(make: "Bajaj")%>' title ="Bike Sales Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a>
-            <a href = '<%=bikes_path(make: "Daelim")%>' title ="Bike Sales Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a>
-            <a href = '<%=bikes_path(make: "Hero Honda")%>' title ="Bike Sales Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a>
-            <a href = '<%=bikes_path(make: "Honda")%>' title ="Bike Sales Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a>
-            <a href = '<%=bikes_path(make: "Hyosung")%>' title ="Bike Sales Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a>
-            <a href = '<%=bikes_path(make: "Royal Enfield")%>' title ="Bike Sales Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a>
-            <a href = '<%=bikes_path(make: "Suzuki")%>' title ="Bike Sales Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a>
-            <a href = '<%=bikes_path(make: "TVS")%>' title ="Bike Sales TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a>
-            <a href = '<%=bikes_path(make: "Yamaha")%>' title ="Bike Sales Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a>
+            <a href = '<%=bikes_path(make: "Bajaj")%>' title ="Bike Sales Nepal - Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a>
+            <a href = '<%=bikes_path(make: "Daelim")%>' title ="Bike Sales Nepal - Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a>
+            <a href = '<%=bikes_path(make: "Hero Honda")%>' title ="Bike Sales Nepal - Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a>
+            <a href = '<%=bikes_path(make: "Honda")%>' title ="Bike Sales Nepal - Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a>
+            <a href = '<%=bikes_path(make: "Hyosung")%>' title ="Bike Sales Nepal - Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a>
+            <a href = '<%=bikes_path(make: "Royal Enfield")%>' title ="Bike Sales Nepal - Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a>
+            <a href = '<%=bikes_path(make: "Suzuki")%>' title ="Bike Sales Nepal - Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a>
+            <a href = '<%=bikes_path(make: "TVS")%>' title ="Bike Sales Nepal - TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a>
+            <a href = '<%=bikes_path(make: "Yamaha")%>' title ="Bike Sales Nepal - Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a>
           </div>  
         </div><!--main_page_browse_by-->
       </div>
@@ -92,40 +92,40 @@
       <div class = "main_page_browse_by">
         <div class= "legen">Browse By: Colour</div>
         <div class="browse_colour">
-          <a href="<%=bikes_path(color: "Beige")%>" title ="Bike Sales Beige"><div class= "color_box_beige"></div></a>
+          <a href="<%=bikes_path(color: "Beige")%>" title ="Bike Sales Nepal - Beige"><div class= "color_box_beige"></div></a>
           <%= link_to "Beige", bikes_path(color: "Beige")%>
-          <a href="<%=bikes_path(color: "Black")%>" title ="Bike Sales Black"><div class= "color_box_black"></div></a>
+          <a href="<%=bikes_path(color: "Black")%>" title ="Bike Sales Nepal - Black"><div class= "color_box_black"></div></a>
           <%= link_to "Black", bikes_path(color: "Black")%>
-          <a href="<%=bikes_path(color: "Blue")%>" title ="Bike Sales Blue"><div class= "color_box_blue"></div></a>
+          <a href="<%=bikes_path(color: "Blue")%>" title ="Bike Sales Nepal - Blue"><div class= "color_box_blue"></div></a>
           <%= link_to "Blue", bikes_path(color: "Blue")%>
-          <a href="<%=bikes_path(color: "Bronze")%>" title ="Bike Sales Bronze"><div class= "color_box_bronze"></div></a>
+          <a href="<%=bikes_path(color: "Bronze")%>" title ="Bike Sales Nepal - Bronze"><div class= "color_box_bronze"></div></a>
           <%= link_to "Bronze", bikes_path(color: "Bronze")%>
       
-          <a href="<%=bikes_path(color: "Brown")%>" title ="Bike Sales Brown"><div class= "color_box_brown"></div></a>
+          <a href="<%=bikes_path(color: "Brown")%>" title ="Bike Sales Nepal - Brown"><div class= "color_box_brown"></div></a>
           <%= link_to "Brown", bikes_path(color: "Brown")%>
-          <a href="<%=bikes_path(color: "Gold")%>" title ="Bike Sales Gold"><div class= "color_box_gold"></div></a>
+          <a href="<%=bikes_path(color: "Gold")%>" title ="Bike Sales Nepal - Gold"><div class= "color_box_gold"></div></a>
           <%= link_to "Gold", bikes_path(color: "Gold")%>
-          <a href="<%=bikes_path(color: "Green")%>" title ="Bike Sales Green"><div class= "color_box_green"></div></a>
+          <a href="<%=bikes_path(color: "Green")%>" title ="Bike Sales Nepal - Green"><div class= "color_box_green"></div></a>
           <%= link_to "Green", bikes_path(color: "Green")%>
-          <a href="<%=bikes_path(color: "Grey")%>" title ="Bike Sales Grey"><div class= "color_box_grey"></div></a>
+          <a href="<%=bikes_path(color: "Grey")%>" title ="Bike Sales Nepal - Grey"><div class= "color_box_grey"></div></a>
           <%= link_to "Grey", bikes_path(color: "Grey")%>
               
-          <a href="<%=bikes_path(color: "Maroon")%>" title ="Bike Sales Maroon"><div class= "color_box_maroon"></div></a>
+          <a href="<%=bikes_path(color: "Maroon")%>" title ="Bike Sales Nepal - Maroon"><div class= "color_box_maroon"></div></a>
           <%= link_to "Maroon", bikes_path(color: "Maroon")%>
-          <a href="<%=bikes_path(color: "Orange")%>" title ="Bike Sales Orange"><div class= "color_box_orange"></div></a>
+          <a href="<%=bikes_path(color: "Orange")%>" title ="Bike Sales Nepal - Orange"><div class= "color_box_orange"></div></a>
           <%= link_to "Orange", bikes_path(color: "Orange")%>
-          <a href="<%=bikes_path(color: "Pink")%>" title ="Bike Sales Pink"><div class= "color_box_pink"></div></a>
+          <a href="<%=bikes_path(color: "Pink")%>" title ="Bike Sales Nepal - Pink"><div class= "color_box_pink"></div></a>
           <%= link_to "Pink", bikes_path(color: "Pink")%>
-          <a href="<%=bikes_path(color: "Purple")%>" title ="Bike Sales Purple"><div class= "color_box_purple"></div></a>
+          <a href="<%=bikes_path(color: "Purple")%>" title ="Bike Sales Nepal - Purple"><div class= "color_box_purple"></div></a>
           <%= link_to "Purple", bikes_path(color: "Purple")%>
               
-          <a href="<%=bikes_path(color: "Red")%>" title ="Bike Sales Red"><div class= "color_box_red"></div></a>
+          <a href="<%=bikes_path(color: "Red")%>" title ="Bike Sales Nepal - Red"><div class= "color_box_red"></div></a>
           <%= link_to "Red", bikes_path(color: "Red")%>
-          <a href="<%=bikes_path(color: "Silver")%>" title ="Bike Sales Silver"><div class= "color_box_silver"></div></a>
+          <a href="<%=bikes_path(color: "Silver")%>" title ="Bike Sales Nepal - Silver"><div class= "color_box_silver"></div></a>
           <%= link_to "Silver", bikes_path(color: "Silver")%>
-          <a href="<%=bikes_path(color: "White")%>" title ="Bike Sales White"><div class= "color_box_white"></div></a>
+          <a href="<%=bikes_path(color: "White")%>" title ="Bike Sales Nepal - White"><div class= "color_box_white"></div></a>
           <%= link_to "White", bikes_path(color: "White")%>
-          <a href="<%=bikes_path(color: "Yellow")%>" title ="Bike Sales Yellow"><div class= "color_box_yellow"></div></a>
+          <a href="<%=bikes_path(color: "Yellow")%>" title ="Bike Sales Nepal - Yellow"><div class= "color_box_yellow"></div></a>
           <%= link_to "Yellow", bikes_path(color: "Yellow")%>
         </div>
       </div>
