main search tool

--- a/app/views/bikes/_search_bikes.html.erb
+++ b/app/views/bikes/_search_bikes.html.erb
@@ -27,6 +27,7 @@
                   <li>
                     Body: <%= bike.body %>  
                   </li>
+                  <%if !bike.odometer.blank?%> 
                   <li>
                     Odometer: <%= bike.odometer %> km
                   </li>
