--- a/app/views/bikes/_search_bikes.html.erb
+++ b/app/views/bikes/_search_bikes.html.erb
@@ -31,6 +31,7 @@
                   <li>
                     Odometer: <%= bike.odometer %> km
                   </li>
+                  <%end%>
                   <li>
                     Location: <%= bike.location %>
                   </li>
