--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -63,7 +63,7 @@
                          
                         <div class = "loading btn">
                             <%= image_tag 'loader.gif', size: "16x16"%> 
-                            <%= link_to "Show More", id: "Next"%>
+                            <a id= "next">Show More</a>
                         </div>
                           <%end%>
                         
