--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -70,20 +70,20 @@
         <div class= "legen">Browse By: Price</div>
         <div class="browse_price">
           <ul>
-            <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10001")%></li>
-            <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "9999", price_to: "25001")%></li>
-            <li><%= link_to "Rs. 25,000 to Rs. 50,000",bikes_path(price_from: "24999", price_to: "50001")%></li            >
-            <li><%= link_to "Rs. 50,000 to Rs. 75,000",bikes_path(price_from: "49999", price_to: "75001")%></li>
-            <li><%= link_to "Rs. 75,000 to Rs. 1,00,000",bikes_path(price_from: "74999", price_to: "100001")%></li>
-            <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "99999", price_to: "150001")%></li>
+            <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10000")%></li>
+            <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "10000", price_to: "25000")%></li>
+            <li><%= link_to "Rs. 25,000 to Rs. 50,000",bikes_path(price_from: "25000", price_to: "50000")%></li            >
+            <li><%= link_to "Rs. 50,000 to Rs. 75,000",bikes_path(price_from: "50000", price_to: "75000")%></li>
+            <li><%= link_to "Rs. 75,000 to Rs. 1,00,000",bikes_path(price_from: "75000", price_to: "100000")%></li>
+            <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "100000", price_to: "150000")%></li>
           </ul>
           <ul>
-            <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "149999", price_to: "200001")%></li>
-            <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "199999", price_to: "300001")%></li>
-            <li><%= link_to "Rs. 3,00,000 to Rs. 4,00,000",bikes_path(price_from: "299999", price_to: "400001")%></li>
-            <li><%= link_to "Rs. 4,00,000 to Rs. 5,00,000",bikes_path(price_from: "399999", price_to: "500001")%></li>
-            <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "499999", price_to: "1000001")%></li>
-            <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "999999", price_to: nil)%></li>
+            <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "150000", price_to: "200000")%></li>
+            <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "200000", price_to: "300000")%></li>
+            <li><%= link_to "Rs. 3,00,000 to Rs. 4,00,000",bikes_path(price_from: "300000", price_to: "400000")%></li>
+            <li><%= link_to "Rs. 4,00,000 to Rs. 5,00,000",bikes_path(price_from: "400000", price_to: "500000")%></li>
+            <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "500000", price_to: "1000000")%></li>
+            <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "1000000", price_to: nil)%></li>
           </ul>
         </div>
       </div>
