--- a/app/views/bikes/_new_bike.html.erb
+++ b/app/views/bikes/_new_bike.html.erb
@@ -26,7 +26,7 @@
     <div class="sell-call-to-action">
       <a href="/bikes/new/" class="create-ad">Create Ad</a>
     </div>
-    <% if user_signed_in?%>
+    <% if signed_in?%>
       <a href="<%=profile_user_path(current_user)%>" class="manage-ad">Manage your Ad</a>
     <%else%>
       <a href="<%=new_user_session_path%>" class="manage-ad">Manage your Ad</a>
