--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,25 +173,25 @@
     </script>    
     <!-- AddThis Smart Layers BEGIN -->
 <!-- Go to http://www.addthis.com/get/smart-layers to customize -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51f9de0701cc7098"></script>
-  <script type="text/javascript">
-    addthis.layers({
-      'theme' : 'transparent',
-      'share' : {
-        'position' : 'left',
-        'numPreferredServices' : 5
-      }, 
-      'follow' : {
-        'services' : [
-          {'service': 'facebook', 'id': 'bikes.bechnu'}
-        ]
-      },  
-      'whatsnext' : {},  
-      'recommended' : {
-        'title': 'Recommended for you:'
-      } 
-    });
-  </script>
+  <!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-51f9de0701cc7098"></script>
+<script type="text/javascript">
+  addthis.layers({
+    'theme' : 'transparent',
+    'share' : {
+      'position' : 'left',
+      'numPreferredServices' : 6
+    }, 
+    'follow' : {
+      'services' : [
+        {'service': 'facebook', 'id': 'bikes.bechnu'}
+      ]
+    },  
+    'whatsnext' : {}  
+  });
+</script>
+<!-- AddThis Smart Layers END -->
   <!-- AddThis Smart Layers END -->
   </body>
 </html>
